crates/xlate/tests/snapshots/golden_matrix__pdf__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Summarize this document."
        },
        {
          "type": "input_file",
          "filename": "report.pdf",
          "file_data": "data:application/pdf;base64,JVBERi0xLjQK"
        },
        {
          "type": "input_file",
          "file_id": "file-abc123"
        }
      ]
    }
  ]
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
